<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/_0"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/d1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/d2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/_2"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/d3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:gravity="center"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:text="@string/mul"
                android:textSize="64sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/d5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/d6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/div"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/d7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/d8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/d9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sub"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/d0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:background="#99d6ff"
                android:layout_margin="3sp"
                android:textSize="64sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/del"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add"
                android:background="#9999ff"
                android:layout_margin="3sp"
                android:textSize="64sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>